# Drama_Info_Backend

./: README.md  pyproject.toml
config/: settings.py
dramas/: admin.py  models.py
dramas/migrations/: 0001_initial.py
