[tool.poetry]
name = "drama-info-backend"
version = "0.1.0"
description = ""
authors = ["YASICJUNWOO <joonoo3@naver.com>"]
readme = "README.md"
packages = [{include = "drama_info_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
